--- a/server/UI/edit_questions.ui
+++ b/server/UI/edit_questions.ui
@@ -166,6 +166,35 @@
     <string>Обновить время</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_img">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>1001</width>
+     <height>441</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../img/for_test2.jpg</pixmap>
+   </property>
+  </widget>
+  <zorder>label_img</zorder>
+  <zorder>tableWidget_question_list</zorder>
+  <zorder>textEdit_add_new_question</zorder>
+  <zorder>pushButton_add</zorder>
+  <zorder>pushButton_dell</zorder>
+  <zorder>pushButton_view_var</zorder>
+  <zorder>pushButton_new_val</zorder>
+  <zorder>pushButton_download_img</zorder>
+  <zorder>label_img_address</zorder>
+  <zorder>label_show_img</zorder>
+  <zorder>pushButton_delete_img</zorder>
+  <zorder>lineEdit_update_time</zorder>
+  <zorder>pushButton_update_time</zorder>
  </widget>
  <resources/>
  <connections/>
