--- a/client/UI/variant_1/zadanie1_2_3_part2_var1.ui
+++ b/client/UI/variant_1/zadanie1_2_3_part2_var1.ui
@@ -860,6 +860,87 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="label_img">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>881</width>
+     <height>661</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../img/for_tests.jpg</pixmap>
+   </property>
+  </widget>
+  <zorder>label_img</zorder>
+  <zorder>label_title</zorder>
+  <zorder>pushButton_answer</zorder>
+  <zorder>pushButton</zorder>
+  <zorder>checkBox_zadan1_part2_var1</zorder>
+  <zorder>checkBox_2_zadan1_part2_var1</zorder>
+  <zorder>checkBox_3_zadan1_part2_var1</zorder>
+  <zorder>label_title_2</zorder>
+  <zorder>checkBox_zadan2_part2_var1</zorder>
+  <zorder>checkBox_zadan2_part2_var1_2</zorder>
+  <zorder>checkBox_zadan2_part2_var1_3</zorder>
+  <zorder>checkBox_zadan2_part2_var1_4</zorder>
+  <zorder>label_title_3</zorder>
+  <zorder>label</zorder>
+  <zorder>label_2</zorder>
+  <zorder>lineEdit</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
+  <zorder>lineEdit_2</zorder>
+  <zorder>label_5</zorder>
+  <zorder>label_6</zorder>
+  <zorder>lineEdit_3</zorder>
+  <zorder>label_7</zorder>
+  <zorder>label_8</zorder>
+  <zorder>lineEdit_4</zorder>
+  <zorder>lineEdit_5</zorder>
+  <zorder>label_9</zorder>
+  <zorder>label_10</zorder>
+  <zorder>label_11</zorder>
+  <zorder>label_12</zorder>
+  <zorder>lineEdit_6</zorder>
+  <zorder>label_13</zorder>
+  <zorder>label_14</zorder>
+  <zorder>lineEdit_7</zorder>
+  <zorder>label_15</zorder>
+  <zorder>lineEdit_8</zorder>
+  <zorder>label_16</zorder>
+  <zorder>lineEdit_9</zorder>
+  <zorder>label_17</zorder>
+  <zorder>label_18</zorder>
+  <zorder>label_19</zorder>
+  <zorder>lineEdit_10</zorder>
+  <zorder>label_20</zorder>
+  <zorder>lineEdit_11</zorder>
+  <zorder>label_21</zorder>
+  <zorder>label_22</zorder>
+  <zorder>lineEdit_12</zorder>
+  <zorder>label_23</zorder>
+  <zorder>label_24</zorder>
+  <zorder>label_25</zorder>
+  <zorder>lineEdit_13</zorder>
+  <zorder>label_26</zorder>
+  <zorder>lineEdit_14</zorder>
+  <zorder>label_27</zorder>
+  <zorder>label_28</zorder>
+  <zorder>label_29</zorder>
+  <zorder>label_30</zorder>
+  <zorder>lineEdit_15</zorder>
+  <zorder>lineEdit_16</zorder>
+  <zorder>label_31</zorder>
+  <zorder>label_32</zorder>
+  <zorder>label_33</zorder>
+  <zorder>lineEdit_17</zorder>
+  <zorder>label_34</zorder>
+  <zorder>label_timer</zorder>
  </widget>
  <resources/>
  <connections/>
