--- a/client/UI/variant_2/zadanie6_part1_var2.ui
+++ b/client/UI/variant_2/zadanie6_part1_var2.ui
@@ -857,6 +857,90 @@
     <string/>
    </property>
   </widget>
+  <widget class="QLabel" name="label_img">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>421</width>
+     <height>631</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../img/for_test2.jpg</pixmap>
+   </property>
+  </widget>
+  <zorder>label_img</zorder>
+  <zorder>label_title</zorder>
+  <zorder>lineEdit_answer_12</zorder>
+  <zorder>label_number_11</zorder>
+  <zorder>label_word_5</zorder>
+  <zorder>lineEdit_answer_10</zorder>
+  <zorder>label_number_8</zorder>
+  <zorder>lineEdit_answer_3</zorder>
+  <zorder>pushButton_answer</zorder>
+  <zorder>label_number_15</zorder>
+  <zorder>lineEdit_answer_11</zorder>
+  <zorder>label_number_10</zorder>
+  <zorder>label_word_9</zorder>
+  <zorder>label_number_1</zorder>
+  <zorder>lineEdit_answer_6</zorder>
+  <zorder>label_number_12</zorder>
+  <zorder>label_word_14</zorder>
+  <zorder>lineEdit_answer_8</zorder>
+  <zorder>label_number_14</zorder>
+  <zorder>label_number_4</zorder>
+  <zorder>label_word_3</zorder>
+  <zorder>label_word_4</zorder>
+  <zorder>label_word_13</zorder>
+  <zorder>lineEdit_answer_9</zorder>
+  <zorder>label_word_1</zorder>
+  <zorder>label_number_9</zorder>
+  <zorder>label_word_8</zorder>
+  <zorder>label_word_7</zorder>
+  <zorder>label_word_10</zorder>
+  <zorder>label_word_2</zorder>
+  <zorder>lineEdit_answer_4</zorder>
+  <zorder>lineEdit_answer_14</zorder>
+  <zorder>lineEdit_answer_2</zorder>
+  <zorder>label_word_15</zorder>
+  <zorder>label_number_6</zorder>
+  <zorder>lineEdit_answer_7</zorder>
+  <zorder>label_number_7</zorder>
+  <zorder>label_word_12</zorder>
+  <zorder>label_number_13</zorder>
+  <zorder>lineEdit_answer_1</zorder>
+  <zorder>lineEdit_answer_13</zorder>
+  <zorder>lineEdit_answer_15</zorder>
+  <zorder>label_number_2</zorder>
+  <zorder>label_number_5</zorder>
+  <zorder>label_number_3</zorder>
+  <zorder>label_word_6</zorder>
+  <zorder>label_word_11</zorder>
+  <zorder>lineEdit_answer_5</zorder>
+  <zorder>label_word_16</zorder>
+  <zorder>label_word_17</zorder>
+  <zorder>label_word_18</zorder>
+  <zorder>label_word_19</zorder>
+  <zorder>label_word_20</zorder>
+  <zorder>label_word_21</zorder>
+  <zorder>label_word_22</zorder>
+  <zorder>label_word_23</zorder>
+  <zorder>label_word_24</zorder>
+  <zorder>label_word_25</zorder>
+  <zorder>label_word_26</zorder>
+  <zorder>label_word_27</zorder>
+  <zorder>label_word_28</zorder>
+  <zorder>label_word_29</zorder>
+  <zorder>label_word_30</zorder>
+  <zorder>lineEdit_answer_16</zorder>
+  <zorder>label_number_16</zorder>
+  <zorder>label_word_31</zorder>
+  <zorder>label_word_32</zorder>
+  <zorder>label_timer</zorder>
  </widget>
  <resources/>
  <connections/>
