--- a/server/UI/variant_2/zadanie1_part1_var2.ui
+++ b/server/UI/variant_2/zadanie1_part1_var2.ui
@@ -790,6 +790,91 @@
     <string>Правильный ответ</string>
    </property>
   </widget>
+  <widget class="QLabel" name="label_img">
+   <property name="geometry">
+    <rect>
+     <x>0</x>
+     <y>0</y>
+     <width>771</width>
+     <height>571</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string/>
+   </property>
+   <property name="pixmap">
+    <pixmap>../../../img/for_test3.jpg</pixmap>
+   </property>
+  </widget>
+  <zorder>label_img</zorder>
+  <zorder>label_title</zorder>
+  <zorder>label_word_1</zorder>
+  <zorder>lineEdit_word_1</zorder>
+  <zorder>label_word_2</zorder>
+  <zorder>lineEdit_word_2</zorder>
+  <zorder>label_word_3</zorder>
+  <zorder>lineEdit_word_3</zorder>
+  <zorder>label_word_4</zorder>
+  <zorder>lineEdit_word_4</zorder>
+  <zorder>label_word_5</zorder>
+  <zorder>lineEdit_word_5</zorder>
+  <zorder>label_word_6</zorder>
+  <zorder>lineEdit_word_6</zorder>
+  <zorder>label_word_7</zorder>
+  <zorder>lineEdit_word_7</zorder>
+  <zorder>label_word_8</zorder>
+  <zorder>lineEdit_word_8</zorder>
+  <zorder>label_word_9</zorder>
+  <zorder>lineEdit_word_9</zorder>
+  <zorder>label_word_10</zorder>
+  <zorder>lineEdit_word_10</zorder>
+  <zorder>label_word_11</zorder>
+  <zorder>lineEdit_word_11</zorder>
+  <zorder>label_word_12</zorder>
+  <zorder>lineEdit_word_12</zorder>
+  <zorder>label_word_13</zorder>
+  <zorder>lineEdit_word_13</zorder>
+  <zorder>label_word_14</zorder>
+  <zorder>lineEdit_word_14</zorder>
+  <zorder>label_word_15</zorder>
+  <zorder>lineEdit_word_15</zorder>
+  <zorder>label_word_16</zorder>
+  <zorder>lineEdit_word_16</zorder>
+  <zorder>label_word_17</zorder>
+  <zorder>lineEdit_word_17</zorder>
+  <zorder>label_word_18</zorder>
+  <zorder>lineEdit_word_18</zorder>
+  <zorder>label_word_19</zorder>
+  <zorder>lineEdit_word_19</zorder>
+  <zorder>label_word_20</zorder>
+  <zorder>lineEdit_word_20</zorder>
+  <zorder>label_word_21</zorder>
+  <zorder>lineEdit_word_21</zorder>
+  <zorder>lineEdit_word_22</zorder>
+  <zorder>lineEdit_word_23</zorder>
+  <zorder>lineEdit_word_24</zorder>
+  <zorder>lineEdit_word_25</zorder>
+  <zorder>lineEdit_word_26</zorder>
+  <zorder>lineEdit_word_27</zorder>
+  <zorder>lineEdit_word_28</zorder>
+  <zorder>lineEdit_word_29</zorder>
+  <zorder>lineEdit_word_30</zorder>
+  <zorder>lineEdit_word_31</zorder>
+  <zorder>lineEdit_word_32</zorder>
+  <zorder>lineEdit_word_33</zorder>
+  <zorder>lineEdit_word_34</zorder>
+  <zorder>lineEdit_word_35</zorder>
+  <zorder>lineEdit_word_36</zorder>
+  <zorder>lineEdit_word_37</zorder>
+  <zorder>lineEdit_word_38</zorder>
+  <zorder>lineEdit_word_39</zorder>
+  <zorder>lineEdit_word_40</zorder>
+  <zorder>lineEdit_word_41</zorder>
+  <zorder>lineEdit_word_42</zorder>
+  <zorder>label_2</zorder>
+  <zorder>label</zorder>
+  <zorder>label_3</zorder>
+  <zorder>label_4</zorder>
  </widget>
  <resources/>
  <connections/>
