--- a/client/UI/variant_2/zadanie4_part2_var2.ui
+++ b/client/UI/variant_2/zadanie4_part2_var2.ui
@@ -115,10 +115,10 @@ p, li { white-space: pre-wrap; }
   <widget class="QPushButton" name="pushButton_show_text">
    <property name="geometry">
     <rect>
-     <x>20</x>
-     <y>600</y>
+     <x>70</x>
+     <y>590</y>
      <width>91</width>
-     <height>41</height>
+     <height>31</height>
     </rect>
    </property>
    <property name="text">
@@ -154,6 +154,32 @@ p, li { white-space: pre-wrap; }
     <pixmap>../../../img/for_test3.jpg</pixmap>
    </property>
   </widget>
+  <widget class="QPushButton" name="pushButton_next">
+   <property name="geometry">
+    <rect>
+     <x>130</x>
+     <y>630</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Далее</string>
+   </property>
+  </widget>
+  <widget class="QPushButton" name="pushButton_previous">
+   <property name="geometry">
+    <rect>
+     <x>10</x>
+     <y>630</y>
+     <width>75</width>
+     <height>23</height>
+    </rect>
+   </property>
+   <property name="text">
+    <string>Назад</string>
+   </property>
+  </widget>
   <zorder>label_img</zorder>
   <zorder>label_title</zorder>
   <zorder>pushButton_answer</zorder>
@@ -163,6 +189,8 @@ p, li { white-space: pre-wrap; }
   <zorder>lineEdit_2</zorder>
   <zorder>pushButton_show_text</zorder>
   <zorder>label_timer</zorder>
+  <zorder>pushButton_next</zorder>
+  <zorder>pushButton_previous</zorder>
  </widget>
  <resources/>
  <connections/>
