--- a/server/UI/variant_1/zadanie4_part2_var1.ui
+++ b/server/UI/variant_1/zadanie4_part2_var1.ui
@@ -16,9 +16,9 @@
   <widget class="QLabel" name="label_title">
    <property name="geometry">
     <rect>
-     <x>100</x>
+     <x>80</x>
      <y>10</y>
-     <width>381</width>
+     <width>441</width>
      <height>61</height>
     </rect>
    </property>
@@ -35,7 +35,7 @@
    </property>
    <property name="text">
     <string>Задание 4.
- Укажите номера абзацев, куда могут быть
+ Укажите номера предложений, куда могут быть
  включены данные ниже части текста.</string>
    </property>
    <property name="textFormat">
