--- a/client/UI/client_test2.ui
+++ b/client/UI/client_test2.ui
@@ -44,9 +44,9 @@
     <property name="geometry">
      <rect>
       <x>0</x>
-      <y>0</y>
+      <y>-340</y>
       <width>1172</width>
-      <height>1056</height>
+      <height>1214</height>
      </rect>
     </property>
     <layout class="QVBoxLayout" name="verticalLayout_18">
@@ -106,6 +106,16 @@
         </layout>
        </item>
        <item>
+        <layout class="QHBoxLayout" name="horizontalLayout">
+         <item>
+          <widget class="QTextBrowser" name="textBrowser_2"/>
+         </item>
+         <item>
+          <widget class="QTextBrowser" name="textBrowser"/>
+         </item>
+        </layout>
+       </item>
+       <item>
         <layout class="QHBoxLayout" name="horizontalLayout_7">
          <item>
           <widget class="QLabel" name="label_img_var1">
@@ -156,6 +166,16 @@
             <string>Четвертый вариант ответа</string>
            </property>
           </widget>
+         </item>
+        </layout>
+       </item>
+       <item>
+        <layout class="QHBoxLayout" name="horizontalLayout_2">
+         <item>
+          <widget class="QTextBrowser" name="textBrowser_4"/>
+         </item>
+         <item>
+          <widget class="QTextBrowser" name="textBrowser_3"/>
          </item>
         </layout>
        </item>
